# vc

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  SFIA_TMPL_SPEC.md  SKILL.md  config.toml  pyproject.toml  terminal.bat
core/: index.html  main.py  md-editor-pm.html  pyproject.toml  server.py  terminal.html
core/Scripts/: ct.bat  dbb.bat  mp.bat  vc.bat  vc_env.bat  vcclean.bat  vcdir.bat  vcer.bat  vcew.bat  vcm.bat  vcmd.bat  vcterm.bat  vcth.bat  vcw.bat  wm.bat
core/lib/: to_markdown.py  vccore.py
exportador/: exporter.py  main.py  pyproject.toml
importador_safic/: CHANGELOG.md  README.md  SKILL.md  importador_safic.py  main.py  mdf2sqlite.py  pyproject.toml  tabelas_necessarias.xlsx  terminal.bat
ollama_analyst/: main.py  prompt01.md  prompt01_answer.md  pyproject.toml
sfia_credAcCust/: builder.py  main.py  pyproject.toml  reporter.py  to_markdown.py
sfia_safic/: README.md  SKILL.md  TrabPaulo.xlsm  auditoria.tmpl.md  builder.py  main.py  pyproject.toml  reporter.py  template_engine.py  terminal.bat  to_markdown.py
sfia_safic/_tmpl/: auditoria.tmpl.md
sfia_safic/reports/: _helpers.py  an_econ##APAGAR##.py  an_econ.py  basicos.py  conc.py  exp_dados.py  item.py  madf.py  menu.py  oper.py  safic_menu.py  safic_menu_det.py
sfiaweb/: index.html  indexGemini.html  main.py  markdown-it.html  md-viewer-pm.html  pyproject.toml  server.py
utils/: aiim.py  dump_code.py  main.py  mapeador_sqlite.py  markdown-it.html  pastasgrandes.md  pmcloud.py  pyproject.toml  sc.py  scan_folders.py  sqlite2md.py  sqlite_dump.py  visualizador_md.html
(+4 files in other folders)
