[project]
name = "vc-sfia_safic"
version = "0.1.0"
description = "Geradores de banco de dados osf, sia, demais e relatórios"
requires-python = "==3.12.*"
authors = [
    { name = "pmarote" }
]
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "tabulate>=0.9.0",
    "pyyaml>=6.0.3",
]

[tool.uv]
managed = true
